# xolodilnik-clone

./: .gitignore  PLAN.md  README.md  pyproject.toml
blog/: admin.py  choices.py  models.py  signals.py  translation.py  urls.py
blog/migrations/: 0001_initial.py  0002_tag_name_en_tag_name_ru_tag_name_uz.py  0003_alter_blogcategory_created_at_and_more.py  0004_blogcategory_name_en_blogcategory_name_ru_and_more.py
blog/serializers/: __init__.py  category.py  comment.py  posts.py
blog/views/: __init__.py  category.py  comment.py  posts.py
common/: admin.py  context_processors.py  models.py
common/migrations/: 0001_initial.py  0002_alter_sponsor_created_at_alter_sponsor_logo_and_more.py
core/: celery.py  jazzmin_conf.py  settings.py  urls.py
payments/: admin.py  choices.py  models.py  translation.py
payments/migrations/: 0001_initial.py  0002_alter_discount_created_at_alter_discount_description_and_more.py  0003_discount_description_en_discount_description_ru_and_more.py
products/: admin.py  models.py  translation.py
products/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_created_at_and_more.py  0003_product_description_en_product_description_ru_and_more.py
templates/: base.html  index.html
templates/auth/: login.html  profile.html  register.html
users/: admin.py  forms.py  models.py  signals.py  translation.py  urls.py  utils.py
users/migrations/: 0001_initial.py  0002_alter_cart_created_at_alter_cart_updated_at_and_more.py  0002_profession_cart_cartitem_user_profession_and_more.py  0004_alter_cart_user.py  (+1 more)
(+12 files in other folders)
